# q1asm-simulator

./: .gitignore  CHANGELOG.md  README.md  q1asm-simulator.cabal  test_sequence.json
app/: Main.hs  ReplMain.hs
example/: active_reset_qcm.json  active_reset_qrm.json  amplitude_sweep.json  bell_state.json  conditional_phase_reset.json  cpmg.json  frequency_sweep.json  hahn_echo.json  marker_pulse.json  multiplexed_readout.json  nested_loops.json  rabi_loop.json  ramsey.json  scope_acquisition.json  single_pulse.json  t1_relaxation.json  tight_loop_underflow.json  virtual_z.json  weighted_integration.json
src/Q1Asm/: Cluster.hs  Encode.hs  Loader.hs  Nco.hs  Parser.hs  Q1Core.hs  Queue.hs  Renderer.hs  RtCore.hs  Simulator.hs  Types.hs
src/Q1Asm/Repl/: Commands.hs  Display.hs  Loop.hs  Queue.hs  Scheduler.hs  State.hs
